--- a/Anime.css
+++ b/Anime.css
@@ -915,7 +915,7 @@ simple rule of add = #more {background-image: url();}
 #more194 {background-image: url(http://cdn.myanimelist.net/images/anime/10/24082.jpg);}
 #more23251 {background-image: url(http://cdn.myanimelist.net/images/anime/6/65665.jpg);}
 #more15813 {background-image: url(http://cdn.myanimelist.net/images/anime/5/53567.jpg);}
-#more14289 {background-image: url(http://cdn.myanimelist.net/images/anime/8/42509.jpg);}
+#more14289 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/39777.jpg);}
 #more9288 {background-image: url(http://cdn.myanimelist.net/images/anime/5/25737.jpg);}
 #more6793 {background-image: url(http://cdn.myanimelist.net/images/anime/8/21336.jpg);}
 #more6408 {background-image: url(http://cdn.myanimelist.net/images/anime/13/24242.jpg);}
@@ -10545,7 +10545,7 @@ simple rule of add = #more {background-image: url();}
 #more30885 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/77510.webp);}
 #more31138 {background-image: url(http://cdn.myanimelist.net/images/anime/9/74787.jpg);}
 #more31240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79410.webp);}
-#more30749 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74027.jpg);}
+#more30749 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/76664.jpg);}
 #more31229 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80953.webp);}
 #more31374 {background-image: url(http://cdn.myanimelist.net/images/anime/3/75467.jpg);}
 #more30363 {background-image: url(http://cdn.myanimelist.net/images/anime/12/76476l.jpg);}
@@ -10553,7 +10553,7 @@ simple rule of add = #more {background-image: url();}
 #more31380 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76320.jpg);}
 #more30901 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75968.jpg);}
 #more31439 {background-image: url(http://cdn.myanimelist.net/images/anime/7/78548.jpg);}
-#more31765 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/79297.webp);}
+#more31765 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82968.jpg);}
 #more30376 {background-image: url(http://cdn.myanimelist.net/images/anime/5/72823l.jpg);}
 #more17725 {background-image: url(http://cdn.myanimelist.net/images/anime/7/75235l.jpg);}
 #more2026 {background-image: url(http://cdn.myanimelist.net/images/anime/7/73932l.jpg);}
@@ -10702,7 +10702,7 @@ simple rule of add = #more {background-image: url();}
 #more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83460.webp);}
 #more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83491.jpg);}
 #more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
-#more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/82895.webp);}
+#more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84417.jpg);}
 #more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83564.webp);}
 #more32494 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/80690.webp);}
 #more32902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/78932.webp);}
