--- a/Anime.css
+++ b/Anime.css
@@ -10655,7 +10655,7 @@ simple rule of add = #more {background-image: url();}
 #more34161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82168.webp);}
 #more33091 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/80753.webp);}
 #more30695 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/81036.webp);}
-#more32951 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82941l.webp);}
+#more32951 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/84624l.jpg);}
 #more32542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/78134.webp);}
 #more34102 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82965.webp);}
 #more33834 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81464.webp);}
@@ -10717,3 +10717,10 @@ simple rule of add = #more {background-image: url();}
 #more32603 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82409l.jpg);}
 #more34934 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84339.jpg);}
 #more32379 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/79352.jpg);}
+#more35073 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84650.jpg);}
+#more34498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83184l.jpg);}
+#more34973 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84451.jpg);}
+#more33206 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83173.jpg);}
+
+
+
