--- a/Manga.css
+++ b/Manga.css
@@ -21,7 +21,7 @@ Manga Tumbnail
 #more5255 {background-image: url(http://cdn.myanimelist.net/images/manga/2/33673.jpg);}
 #more2921 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6309.jpg);}
 #more584 {background-image: url(http://cdn.myanimelist.net/images/manga/5/16174.jpg);}
-#more3986 {background-image: url(http://cdn.myanimelist.net/images/manga/3/53209.jpg);}
+#more3986 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/186275.jpg);}
 #more9 {background-image: url(http://cdn.myanimelist.net/images/manga/5/973.jpg);}
 #more3031 {background-image: url(http://cdn.myanimelist.net/images/manga/2/80893.jpg);}
 #more13492 {background-image: url(http://cdn.myanimelist.net/images/manga/3/39738.jpg);}
