--- a/Anime.css
+++ b/Anime.css
@@ -10721,6 +10721,6 @@ simple rule of add = #more {background-image: url();}
 #more34498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83184l.jpg);}
 #more34973 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84451.jpg);}
 #more33206 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83173.jpg);}
-
-
-
+#more33031 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/80746.jpg);}
+#more33502 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/84121.jpg);}
+#more34822 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/84327.jpg);}
