--- a/Manga.css
+++ b/Manga.css
@@ -7682,7 +7682,7 @@ Manga Tumbnail
 #more51661 {background-image: url(http://cdn.myanimelist.net/images/manga/1/91129.jpg);}
 #more11726 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15937.jpg);}
 #more41429 {background-image: url(http://cdn.myanimelist.net/images/manga/2/72583.jpg);}
-#more37885 {background-image: url(http://cdn.myanimelist.net/images/manga/3/86289.jpg);}
+#more37885 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/86289.jpg);}
 #more10499 {background-image: url(http://cdn.myanimelist.net/images/manga/3/35771.jpg);}
 #more11271 {background-image: url(http://cdn.myanimelist.net/images/manga/3/48051.jpg);}
 #more35593 {background-image: url(http://cdn.myanimelist.net/images/manga/2/64559.jpg);}
