--- a/Anime.css
+++ b/Anime.css
@@ -10628,7 +10628,7 @@ simple rule of add = #more {background-image: url();}
 #more32485 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/77935.webp);}
 #more31646 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82898.webp);}
 #more32998 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79160.webp);}
-#more33506 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82644.webp);}
+#more33506 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85201.jpg);}
 #more33729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83105l.jpg);}
 #more33730 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83828l.jpg);}
 #more33728 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81110l.jpg);}
@@ -10727,4 +10727,4 @@ simple rule of add = #more {background-image: url();}
 #more32936 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84412.jpg);}
 #more34514 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83210.jpg);}
 #more35247 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84913.jpg);}
-
+#more32648 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/80752.jpg);}
