--- a/Anime.css
+++ b/Anime.css
@@ -1218,7 +1218,7 @@ simple rule of add = #more {background-image: url();}
 #more10110 {background-image: url(http://cdn.myanimelist.net/images/anime/13/29971.jpg);}
 #more9124 {background-image: url(http://cdn.myanimelist.net/images/anime/3/25253.jpg);}
 #more6895 {background-image: url(http://cdn.myanimelist.net/images/anime/3/71800.jpg);}
-#more6802 {background-image: url(http://cdn.myanimelist.net/images/anime/3/17753.jpg);}
+#more6802 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81654l.jpg);}
 #more5713 {background-image: url(http://cdn.myanimelist.net/images/anime/10/25454.jpg);}
 #more5710 {background-image: url(http://cdn.myanimelist.net/images/anime/5/24538.jpg);}
 #more5667 {background-image: url(http://cdn.myanimelist.net/images/anime/2/17923.jpg);}
@@ -10699,7 +10699,7 @@ simple rule of add = #more {background-image: url();}
 #more34566 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83369.webp);}
 #more30911 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79271.webp);}
 #more33475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83443.webp);}
-#more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83460.webp);}
+#more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/85227.jpg);}
 #more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84939.jpg);}
 #more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
 #more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84417.jpg);}
