--- a/Anime.css
+++ b/Anime.css
@@ -1985,7 +1985,7 @@ simple rule of add = #more {background-image: url();}
 #more17717 {background-image: url(http://cdn.myanimelist.net/images/anime/6/47409.jpg);}
 #more14027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/39215.jpg);}
 #more13585 {background-image: url(http://cdn.myanimelist.net/images/anime/11/38181.jpg);}
-#more13161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/74047.jp);}
+#more13161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/74047.jpg);}
 #more12823 {background-image: url(http://cdn.myanimelist.net/images/anime/11/36063.jpg);}
 #more10825 {background-image: url(http://cdn.myanimelist.net/images/anime/12/29888.jpg);}
 #more9716 {background-image: url(http://cdn.myanimelist.net/images/anime/3/26996.jpg);}
@@ -2255,7 +2255,7 @@ simple rule of add = #more {background-image: url();}
 #more4156 {background-image: url(http://cdn.myanimelist.net/images/anime/10/19666.jpg);}
 #more3692 {background-image: url(http://cdn.myanimelist.net/images/anime/10/25746.jpg);}
 #more3460 {background-image: url(http://cdn.myanimelist.net/images/anime/2/28561.jpg);}
-#more2993 {background-image: url(http://cdn.myanimelist.net/images/anime/3/25062.jpg);}
+#more2993 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/25062.jpg);}
 #more2907 {background-image: url(http://cdn.myanimelist.net/images/anime/11/17464.jpg);}
 #more2748 {background-image: url(http://cdn.myanimelist.net/images/anime/13/3706.jpg);}
 #more2671 {background-image: url(http://cdn.myanimelist.net/images/anime/7/72408.jpg);}
@@ -2752,7 +2752,7 @@ simple rule of add = #more {background-image: url();}
 #more1457 {background-image: url(http://cdn.myanimelist.net/images/anime/5/11220.jpg);}
 #more1421 {background-image: url(http://cdn.myanimelist.net/images/anime/9/45855.jpg);}
 #more1311 {background-image: url(http://cdn.myanimelist.net/images/anime/10/22857.jpg);}
-#more1118 {background-image: url(http://cdn.myanimelist.net/images/anime/5/8357.jpg);}
+#more1118 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/8357.jpg);}
 #more1104 {background-image: url(http://cdn.myanimelist.net/images/anime/7/50669.jpg);}
 #more859 {background-image: url(http://cdn.myanimelist.net/images/anime/3/20365.jpg);}
 #more621 {background-image: url(http://cdn.myanimelist.net/images/anime/12/31985.jpg);}
@@ -6883,7 +6883,7 @@ simple rule of add = #more {background-image: url();}
 #more1442 {background-image: url(http://cdn.myanimelist.net/images/anime/13/30791.jpg);}
 #more25461 {background-image: url(http://cdn.myanimelist.net/images/anime/9/64973.jpg);}
 #more13369 {background-image: url(http://cdn.myanimelist.net/images/anime/10/37455.jpg);}
-#more11189 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/8357.jpg);}
+#more11189 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/30955.jpg);}
 #more10674 {background-image: url(http://cdn.myanimelist.net/images/anime/2/29400.jpg);}
 #more7482 {background-image: url(http://cdn.myanimelist.net/images/anime/4/27220.jpg);}
 #more6777 {background-image: url(http://cdn.myanimelist.net/images/anime/11/15638.jpg);}
@@ -7763,7 +7763,7 @@ simple rule of add = #more {background-image: url();}
 #more29937 {background-image: url(http://cdn.myanimelist.net/images/anime/10/71825.jpg);}
 #more29936 {background-image: url(http://cdn.myanimelist.net/images/anime/12/71842.jpg);}
 #more29935 {background-image: url(http://cdn.myanimelist.net/images/anime/12/71868.jpg);}
-#more29933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/25062.jpg);}
+#more29933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/71822.jpg);}
 #more29932 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71818.jpg);}
 #more29929 {background-image: url(http://cdn.myanimelist.net/images/anime/2/72006.jpg);}
 #more29928 {background-image: url(http://cdn.myanimelist.net/images/anime/3/72005.jpg);}
@@ -10717,7 +10717,7 @@ simple rule of add = #more {background-image: url();}
 #more34934 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86101.jpg);}
 #more32379 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/79352.jpg);}
 #more35073 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84650.jpg);}
-#more34498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83184l.jpg);}
+#more34498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86400.jpg);}
 #more34973 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84451.jpg);}
 #more33206 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85434.jpg);}
 #more33031 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/80746.jpg);}
@@ -10737,3 +10737,5 @@ simple rule of add = #more {background-image: url();}
 #more34825 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84101.jpg);}
 #more35760 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86318.jpg);}
 #more34902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86142.jpg);}
+#more35240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/84891.jpg);}
+#more {background-image: url();}
