--- a/Anime.css
+++ b/Anime.css
@@ -548,7 +548,7 @@ simple rule of add = #more {background-image: url();}
 #more13663 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/42217.jpg);}
 #more11737 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/42005.jpg);}
 #more1910 {background-image: url(http://cdn.myanimelist.net/images/anime/9/14522.jpg);}
-#more1887 {background-image: url(http://cdn.myanimelist.net/images/anime/13/15010.jpg);}
+#more1887 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/15010.jpg);}
 #more1824 {background-image: url(http://cdn.myanimelist.net/images/anime/12/10128.jpg);}
 #more1425 {background-image: url(http://cdn.myanimelist.net/images/anime/7/34035.jpg);}
 #more1379 {background-image: url(http://cdn.myanimelist.net/images/anime/5/63855.jpg);}
@@ -10585,14 +10585,14 @@ simple rule of add = #more {background-image: url();}
 #more31711 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79330.webp);}
 #more32093 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/78565.webp);}
 #more32105 {background-image: url(http://cdn.myanimelist.net/images/anime/3/77328.jpg);}
-#more31763 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80429.jpg);}
+#more31763 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87145.jpg);}
 #more31914 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/77837.jpg);}
 #more32360 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/80823.webp);}
 #more32182 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79183.webp);}
 #more31821 {background-image: url(http://cdn.myanimelist.net/images/anime/11/76648l.jpg);}
 #more31478 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79409.webp);}
 #more31636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/77833.jpg);}
-#more32271 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/84889.jpg);}
+#more32271 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/86523.jpg);}
 #more31163 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86304l.jpg);}
 #more31376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/80039.webp);}
 #more31737 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79107.webp);}
@@ -10637,7 +10637,7 @@ simple rule of add = #more {background-image: url();}
 #more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
 #more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83735l.jpg);}
 #more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79221.webp);}
-#more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79999.webp);}
+#more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87048.jpg);}
 #more31798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78466.webp);}
 #more32937 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82521.webp);}
 #more32380 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80582.webp);}
@@ -10657,11 +10657,11 @@ simple rule of add = #more {background-image: url();}
 #more32951 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82941.jpg);}
 #more32542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/78134.webp);}
 #more34102 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82965.webp);}
-#more33834 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81464.webp);}
+#more33834 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/86620.jpg);}
 #more33775 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82256.webp);}
-#more33286 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81413.webp);}
+#more33286 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/86582.jpg);}
 #more33036 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82537.webp);}
-#more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79229.webp);}
+#more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83580.jpg);}
 #more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84461.jpg);}
 #more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86269.jpg);}
 #more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84052.jpg);}
@@ -10685,7 +10685,7 @@ simple rule of add = #more {background-image: url();}
 #more34445 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83013.webp);}
 #more34465 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83086.webp);}
 #more34497 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83232.webp);}
-#more34279 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85993.jpg);}
+#more34279 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86500.jpg);}
 #more31173 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77834.webp);}
 #more33354 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/83107.webp);}
 #more33208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79799.webp);}
@@ -10699,10 +10699,10 @@ simple rule of add = #more {background-image: url();}
 #more30911 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79271.webp);}
 #more33475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83995.jpg);}
 #more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/85227.jpg);}
-#more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/86077.jpg);}
+#more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86751.jpg);}
 #more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
 #more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84417.jpg);}
-#more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/85321.jpg);}
+#more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86739.jpg);}
 #more32494 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/80690.webp);}
 #more32902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/80587.jpg);}
 #more32979 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/82292l.jpg);}
@@ -10710,11 +10710,11 @@ simple rule of add = #more {background-image: url();}
 #more31500 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80556.jpg);}
 #more34658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83611.jpg);}
 #more34712 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84718.jpg);}
-#more34933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/85875.jpg);}
+#more34933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86578.jpg);}
 #more33731 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82590l.jpg);}
 #more31980 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/78265l.jpg);}
 #more32603 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82409l.jpg);}
-#more34934 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86101.jpg);}
+#more34934 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86663.jpg);}
 #more32379 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/79352.jpg);}
 #more35073 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84650.jpg);}
 #more34498 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86400.jpg);}
@@ -10729,13 +10729,31 @@ simple rule of add = #more {background-image: url();}
 #more32648 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/80752.jpg);}
 #more35252 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84922.jpg);}
 #more35220 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/84860.jpg);}
-#more35507 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/85585.jpg);}
+#more35507 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86829.jpg);}
 #more34012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85392.jpg);}
 #more35608 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/85806.jpg);}
 #more35413 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/85285.jpg);}
-#more35203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/84825.jpg);}
-#more34825 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84101.jpg);}
+#more35203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86794.jpg);}
+#more34825 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/86644.jpg);}
 #more35760 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86318.jpg);}
-#more34902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86142.jpg);}
-#more35240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/84891.jpg);}
+#more34902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/86676.jpg);}
+#more35240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86768.jpg);}
+#more35932 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86840.jpg);}
+#more35834 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/86570.jpg);}
+#more35964 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/86920.jpg);}
+#more36049 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/87150.jpg);}
+#more35849 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/86641l.jpg);}
+#more35928 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86824.jpg);}
+#more35999 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86994.jpg);}
+#more34280 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86828.jpg);}
+#more36028 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/87084.jpg);}
+#more35889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86760.jpg);}
+#more35868 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86707.jp);}
+#more35851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86653.jpg);}
+#more35905 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86781.jpg);}
+#more35466 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/86773.jpg);}
+#more35835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/86627.jpg);}
+#more35062 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87017.jpg);}
+#more35968 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86933.jpg);}
+#more35790 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87142.jpg);}
 #more {background-image: url();}
