--- a/Anime.css
+++ b/Anime.css
@@ -10684,7 +10684,7 @@ simple rule of add = #more {background-image: url();}
 #more32686 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81906.webp);}
 #more34445 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83013.webp);}
 #more34465 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83086.webp);}
-#more34497 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83232.webp);}
+#more34497 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/87234.jpg);}
 #more34279 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86500.jpg);}
 #more31173 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77834.webp);}
 #more33354 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/83107.webp);}
@@ -10748,7 +10748,7 @@ simple rule of add = #more {background-image: url();}
 #more34280 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86828.jpg);}
 #more36028 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/87084.jpg);}
 #more35889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86760.jpg);}
-#more35868 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86707.jp);}
+#more35868 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86707.jpg);}
 #more35851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86653.jpg);}
 #more35905 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86781.jpg);}
 #more35466 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/86773.jpg);}
@@ -10756,4 +10756,4 @@ simple rule of add = #more {background-image: url();}
 #more35062 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87017.jpg);}
 #more35968 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86933.jpg);}
 #more35790 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87142.jpg);}
-#more {background-image: url();}
+#more36106 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/87318.jpg);}
